--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,5 +1,39 @@
-$color: red;
+$color: white;
+$fiveStarColor: rgb(156, 0, 0);
+$fourStarColor: rgb(230, 64, 23);
+$threeStarColor: rgba(230, 123, 23, 0.993);
+$twoStarColor: rgb(241, 201, 20);
+$oneStarColor: rgb(236, 212, 103);
 
-* {
-    color: $color
+// star {
+//     color: $color
+// }
+
+// starBox {
+//     color: $starBoxColor
+// }
+
+.starBox {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 20%;
+    padding: 0px;
+    background-color: rgb(231, 27, 27);
+    border: 1px solid rgb(231, 27, 27);
+
 }
+.star {
+    color: white;
+}
+
+.emptyStarBox {
+    width: 20px;
+    height: 20px;
+    margin: 5px;
+    border-radius: 20%;
+    background-color: rgb(214, 211, 211);
+    border: 1px solid rgb(214, 211, 211);    
+}
+
+module.exports 
