--- a/client/src/components/Review/RatingBar/RatingBar.scss
+++ b/client/src/components/Review/RatingBar/RatingBar.scss
@@ -1,8 +1,8 @@
-$fiveStarColor: rgb(156, 0, 0);
-$fourStarColor: rgb(230, 64, 23);
-$threeStarColor: rgba(230, 123, 23, 0.993);
-$twoStarColor: rgb(241, 201, 20);
-$oneStarColor: rgb(236, 212, 103);
+$fiveStarColor: rgb(201, 5, 5);
+$fourStarColor: rgb(255, 45, 38);
+$threeStarColor: rgb(255, 115, 0);
+$twoStarColor: rgb(251, 255, 0);
+$oneStarColor: rgb(241, 225, 150);
 
 
     .oneStar {
