--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -3,7 +3,7 @@ $fiveStarColor: rgb(156, 0, 0);
 $fourStarColor: rgb(230, 64, 23);
 $threeStarColor: rgba(230, 123, 23, 0.993);
 $twoStarColor: rgb(241, 201, 20);
-$oneStarColor: rgb(236, 212, 103);
+$oneStarColor: rgb(246, 255, 122);
 
 // star {
 //     color: $color
@@ -13,27 +13,25 @@ $oneStarColor: rgb(236, 212, 103);
 //     color: $starBoxColor
 // }
 
-.starBox {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-    border-radius: 20%;
-    padding: 0px;
-    background-color: rgb(231, 27, 27);
-    border: 1px solid rgb(231, 27, 27);
+// .starBox {
+//     width: 20px;
+//     height: 20px;
+//     margin: 5px;
+//     border-radius: 20%;
+//     padding: 0px;
+//     background-color: rgb(231, 27, 27);
+//     border: 1px solid rgb(231, 27, 27);
 
-}
-.star {
-    color: white;
-}
+// }
+// .star {
+//     color: white;
+// }
 
-.emptyStarBox {
-    width: 20px;
-    height: 20px;
-    margin: 5px;
-    border-radius: 20%;
-    background-color: rgb(214, 211, 211);
-    border: 1px solid rgb(214, 211, 211);    
-}
-
-module.exports 
+// .emptyStarBox {
+//     width: 20px;
+//     height: 20px;
+//     margin: 5px;
+//     border-radius: 20%;
+//     background-color: rgb(214, 211, 211);
+//     border: 1px solid rgb(214, 211, 211);    
+// }
