--- a/client/src/styles/Sort.styles.scss
+++ b/client/src/styles/Sort.styles.scss
@@ -2,3 +2,25 @@
     padding-left: 30px;
     color: rgb(51,102,187);
 }
+.container { 
+    position: relative; 
+    display: inline-block;
+}
+.button { 
+    padding: 0; 
+    width: 150px; 
+    border: 0; 
+    background-color: #fff; 
+    color:  rgb(51,102,187); 
+    cursor: pointer; 
+    outline: 0; font-size: 12px; 
+}
+.dropdown { 
+    position: absolute; 
+    top: 100%; 
+    left: 0; 
+    width: 300px; 
+    z-index: 2; 
+    border: 1px solid rgba(0, 0, 0, 0.04); 
+    box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.14);
+ }
