--- a/client/src/styles/Sort.styles.scss
+++ b/client/src/styles/Sort.styles.scss
@@ -8,19 +8,31 @@
 }
 .button { 
     padding: 0; 
-    width: 150px; 
+    width: 200px; 
     border: 0; 
     background-color: #fff; 
     color:  rgb(51,102,187); 
     cursor: pointer; 
-    outline: 0; font-size: 12px; 
+    outline: 0; font-size: 14px; 
 }
 .dropdown { 
     position: absolute; 
     top: 100%; 
-    left: 0; 
-    width: 300px; 
-    z-index: 2; 
+    left: 40px; 
+    width: 200px; 
     border: 1px solid rgba(0, 0, 0, 0.04); 
     box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.14);
  }
+ ul { 
+    list-style: none; 
+    padding: 0; 
+    margin: 0; 
+ } 
+ li { 
+     padding: 4px 12px; 
+     color: rgb(51,102,187);
+    } 
+    li:hover { 
+        text-decoration: underline;; 
+        cursor: pointer; 
+    }
