--- a/client/src/styles/Sort.styles.scss
+++ b/client/src/styles/Sort.styles.scss
@@ -20,6 +20,8 @@
     top: 100%; 
     left: 40px; 
     width: 200px; 
+    z-index: 2;
+    background-color: white;
     border: 1px solid rgba(0, 0, 0, 0.04); 
     box-shadow: 0 2px 2px 2px rgba(0, 0, 0, 0.14);
  }
