adds styling and click function to USEFUL vote button

--- a/client/src/components/Review/VoteButtons/VoteButtons.scss
+++ b/client/src/components/Review/VoteButtons/VoteButtons.scss
@@ -1,3 +1,12 @@
 .btnText {
     padding: 5px
 }
+
+.voteBtn { 
+    height: 35px;
+    border: 1px solid rgb(148, 147, 147);
+    color: rgb(75, 74, 74);
+    width: 88px;
+    margin-left: 7px;
+    border-radius: 2px;
+}
