patch request stores vote data in database

--- a/client/src/components/Review/VoteButtons/VoteButtons.scss
+++ b/client/src/components/Review/VoteButtons/VoteButtons.scss
@@ -10,3 +10,8 @@
     margin-left: 7px;
     border-radius: 2px;
 }
+
+.pushed {
+    color: rgb(33, 146, 221);
+    // background-color: rgb(33, 146, 221);
+}
