implements functionality / styling for all vote buttons

--- a/client/src/components/Review/VoteButtons/VoteButtons.scss
+++ b/client/src/components/Review/VoteButtons/VoteButtons.scss
@@ -12,6 +12,7 @@
 }
 
 .pushed {
-    color: rgb(33, 146, 221);
-    // background-color: rgb(33, 146, 221);
+    color: white;
+    background-color: rgb(65, 121, 243);
+    border: 1px, solid, rgb(65, 121, 243);
 }
