fixes file structure

--- a/client/src/styles/AddReview.styles.scss
+++ b/client/src/styles/AddReview.styles.scss
@@ -28,14 +28,14 @@
 
 
 
-// .reviewContainer {
-//     height: 115px;
-//     width: 450px;
-//     background-color: rgb(221, 221, 221);
-//     margin-left: 175px;
-//     margin-top: 10px;
-//     margin-bottom: 10px;
-// }
+.reviewContainer {
+    height: 115px;
+    width: 450px;
+    background-color: rgb(221, 221, 221);
+    margin-left: 175px;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
 
 
     // .addStar {
