--- a/client/src/styles/ReviewList.styles.scss
+++ b/client/src/styles/ReviewList.styles.scss
@@ -1,5 +1,9 @@
 .reviewItem {
     border-top: solid 1px rgba(230, 227, 227, 0.795);
-    padding-top: 15px;
+    // padding-top: 15px;
+    position: relative;
+    bottom: 100px;
+    // top: 100px; 
+    // padding-bottom: 0px;
 }
 
