--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -5,33 +5,6 @@ $threeStarColor: rgba(230, 123, 23, 0.993);
 $twoStarColor: rgb(241, 201, 20);
 $oneStarColor: rgb(246, 255, 122);
 
-// star {
-//     color: $color
-// }
-
-// starBox {
-//     color: $starBoxColor
-// }
-
-// .starBox {
-//     width: 20px;
-//     height: 20px;
-//     margin: 5px;
-//     border-radius: 20%;
-//     padding: 0px;
-//     background-color: rgb(231, 27, 27);
-//     border: 1px solid rgb(231, 27, 27);
-
-// }
-// .star {
-//     color: white;
-// }
-
-// .emptyStarBox {
-//     width: 20px;
-//     height: 20px;
-//     margin: 5px;
-//     border-radius: 20%;
-//     background-color: rgb(214, 211, 211);
-//     border: 1px solid rgb(214, 211, 211);    
-// }
+body {
+    font-family: "Helvetica Rounded";
+  }
