--- a/client/src/components/Review/CheckIn/CheckIn.scss
+++ b/client/src/components/Review/CheckIn/CheckIn.scss
@@ -2,6 +2,11 @@
   padding-top: 5px;
 }
 .checkInIcon{
-    color: rgb(80, 156, 226);
+    color: #0073bb;
     padding-left: 3 px;
+}
+.checkInText {
+  font-family: Helvetica, Arial;
+  color: rgb(107, 107, 107);
+  font-size: 0.8em;
 }
