--- a/client/src/components/Review/Review.scss
+++ b/client/src/components/Review/Review.scss
@@ -1,4 +1,14 @@
 .reviewBody {
-    width: 350px;
+    width: 375px;
     border: 1px transparent black;
+    font-family: Helvetica, Arial;
+    
+    color: rgb(54, 53, 53);
+    font-size: 0.95em;
+}
+.date { 
+    font-family: Helvetica, Arial;
+    color: rgb(128, 126, 126);
+    font-size: 0.9em;
+    padding-left: 3px;
 }
