--- a/client/src/components/Review/User/User.scss
+++ b/client/src/components/Review/User/User.scss
@@ -11,13 +11,28 @@
     padding-right: 5px;
 }
 .userName {
-    color: rgb(51,102,187);
+    font-family: Helvetica, Arial;
+    font-size: 0.9em;
+    width: 95px;
+    color: #0073bb;
+
 }
+// .userInfo {
+    
+// }
+.userInfoText{
+    color: rgb(53, 52, 52);
+    font-size: 0.8em;
+    font-family: Helvetica, Arial;
+}
+
 .userName:hover {
     text-decoration: underline;
+
+    width: 95px;
 }
 .userIcon {
-    color: rgb(247, 77, 10);
+    color: rgb(255, 95, 31);
     padding-right: 5px ;
 }
 .userStarIcon {
@@ -25,14 +40,14 @@
     // height: 5px;
     padding: 0px;
     border-radius: 20%;
-    background-color: rgb(247, 77, 10);
-    border: 1px solid rgb(247, 77, 10);
+    background-color: rgb(255, 97, 35);
+    border: 1px solid rgb(255, 97, 34);
 }
 .starIcon {
     
     color: white;
-    background-color: rgb(247, 77, 10);
-    border: 1px solid rgb(247, 77, 10);
+    background-color: rgb(255, 95, 31);
+    border: 1px solid rgb(255, 93, 28);
     padding: 1px;
     border-radius: 20%;
 }
