--- a/client/src/styles/AddRating.styles.scss
+++ b/client/src/styles/AddRating.styles.scss
@@ -1,18 +1,105 @@
 .reviewContainer {
+    position: relative;
+    bottom: 80px;
     height: 100px;
     width: 400px;
     background-color: rgb(241, 241, 241);
-    margin-left: 175px;
-    margin-top: 10px;
-    margin-bottom: 10px;
+    margin-left: 270px;
+    // margin-top: 1px;
+    margin-bottom: 80px;
+    display: 'flex';
+    alignItems: 'center';
     border-radius: 5px;
     border: solid 1px rgb(211, 209, 209);
 }
 
 .addReviewLink {
     margin-left: 90px;
+    color:#0073bb;
 }
 .addReviewLink:hover {
-    color:rgb(51,102,187);
+    
     text-decoration: underline;
+}
+
+.astroIcon {
+    color : rgb(194, 194, 194)
+}
+
+.bar {
+    position: relative;
+    bottom: 17px;
+    left: 80px;
+    width: 70px;
+    height: 2px;
+    background-color: rgb(194, 194, 194);
+    border-radius: 1px;
+}
+.bartwo {
+        position: relative;
+        bottom: 8px;
+        left: 80px;
+        width: 77px;
+        height: 2px;
+        background-color: rgb(194, 194, 194);
+        border-radius: 1px;
+
+}
+.barThree {
+    position: relative;
+    bottom: 16px;
+    left: 100px;
+    width: 60px;
+    height: 2px;
+    background-color: rgb(194, 194, 194);
+    border-radius: 1px;
+}
+.barFour {
+    position: relative;
+    bottom: 18px;
+    left: 100px;
+    width: 55px;
+    height: 2px;
+    background-color: rgb(194, 194, 194);
+    border-radius: 1px;
+}
+.iconContainer {
+    margin-right: 4px;
+    position: relative;
+    top: 37px;
+    padding: 15px;
+    border-radius: 5px;
+    color: solid 1px rgb(238, 237, 237);
+    width: 25px;
+    padding-top: 35px;
+    // padding-right: 2px;
+    background-color: rgba(241, 238, 238, 0.87);
+}
+
+.newIcon {
+    margin-left: 80px;
+    position: relative;
+    bottom: 9px;
+    color: rgb(235, 83, 13);  
+    width: 10px;
+    
+}
+.newStarContainer {
+    
+    margin-left: 80px;
+    position: relative;
+    // top: 0px;
+    font-size: 0.7em;
+    bottom: 9px;
+    color: white; 
+    height: 3px;
+    // padding-top: -1px;
+    padding-top: 0;
+    padding-bottom: 10px;
+    padding-left: 2px;
+    padding-right: 2px;
+    background-color: rgb(235, 83, 13); 
+    border: solid 1px rgb(235, 83, 13);
+    border-radius: 15%;
+    width: 10px;  
 }
