--- a/client/src/styles/Sort.styles.scss
+++ b/client/src/styles/Sort.styles.scss
@@ -1,17 +1,18 @@
 .sortMenu {
     padding-left: 30px;
-    color: rgb(51,102,187);
+    color: #0073bb;
 }
 .container { 
     position: relative; 
     display: inline-block;
 }
 .button { 
+    font-family: Helvetica, Arial;
     padding: 0; 
     width: 200px; 
     border: 0; 
     background-color: #fff; 
-    color:  rgb(51,102,187); 
+    color:  #0073bb; 
     cursor: pointer; 
     outline: 0; font-size: 14px; 
 }
@@ -32,7 +33,7 @@
  } 
  li { 
      padding: 4px 12px; 
-     color: rgb(51,102,187);
+     color: #0073bb;
     } 
     li:hover { 
         text-decoration: underline;; 
