adds styling to Pagination Component

--- a/client/src/styles/AddRating.styles.scss
+++ b/client/src/styles/AddRating.styles.scss
@@ -14,8 +14,10 @@
 }
 
 .addReviewLink {
-    margin-left: 90px;
+    margin-left: 75px;
     color:#0073bb;
+    font-family: Helvetica, Arial;
+    font-size: 0.9em;
 }
 .addReviewLink:hover {
     
