--- a/client/src/styles/Pagination.styles.scss
+++ b/client/src/styles/Pagination.styles.scss
@@ -1,10 +1,48 @@
 .pagination {
-    display: inline-block;
+    // display: inline-block;
+    position: relative;
+    // bottom: 8px;
+    border-bottom: solid 1px rgba(230, 227, 227, 0.795);
+    height: 50px;
+    width: 100%;
+    float:right;
+    margin-bottom: 100px;
+    margin-top: 20px;
+    // bottom: 20px;
+  }
+  .pageText{
+      position: relative;
+      float:left;
+      bottom: 12px;
+      padding-bottom: 20px;
+      font-family: Helvetica, Arial;
+      font-size: 0.95em;
+      color: #333;
+
+      
+  }
+  .linkss {
+      float: right;
+      padding-right: 300px;
+  }
+  .pagination a {
+    font-family: Helvetica, Arial;
+    // float: left;
+    padding: 8px;
+    text-decoration: none;
+    
+  }
+
+  .pageLink {
+    font-family: Helvetica, Arial;
+    color:  #0073bb; 
+    
+  }
+  .pageLink:hover {
+      text-decoration: underline;
+      cursor: pointer
   }
   
-  .pagination a {
-    color: black;
-    float: left;
-    padding: 8px 16px;
-    text-decoration: none;
+  .current {
+      color: black;
   }
