--- a/client/src/styles/ReviewList.styles.scss
+++ b/client/src/styles/ReviewList.styles.scss
@@ -2,8 +2,13 @@
     border-top: solid 1px rgba(230, 227, 227, 0.795);
     // padding-top: 15px;
     position: relative;
-    bottom: 100px;
-    // top: 100px; 
+    // padding-bottom: 10px;
+    bottom: 10%;
+    // top: 40px; 
     // padding-bottom: 0px;
+}
+
+.finalReview {
+    border-bottom: solid 1px rgba(230, 227, 227, 0.795);
 }
 
