shifts the entire application 150px to the right

--- a/client/src/components/Review/User/User.scss
+++ b/client/src/components/Review/User/User.scss
@@ -10,9 +10,9 @@
     padding-bottom: 30px;
     padding-right: 5px;
 }
-.userName {
+#userName {
     font-family: Helvetica, Arial;
-    font-size: 0.9em;
+    font-size: 0.8em;
     width: 95px;
     color: #0073bb;
 
