--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -1,10 +1,11 @@
-$color: white;
-$fiveStarColor: rgb(156, 0, 0);
-$fourStarColor: rgb(230, 64, 23);
-$threeStarColor: rgba(230, 123, 23, 0.993);
-$twoStarColor: rgb(241, 201, 20);
-$oneStarColor: rgb(246, 255, 122);
+// $color: white;
+// $fiveStarColor: rgb(156, 0, 0);
+// $fourStarColor: rgb(230, 64, 23);
+// $threeStarColor: rgba(230, 123, 23, 0.993);
+// $twoStarColor: rgb(241, 201, 20);
+// $oneStarColor: rgb(246, 255, 122);
 
-body {
-    font-family: "Helvetica Rounded";
-  }
+.application {
+    position: relative;
+    margin-left: 200px;
+}
