--- a/client/src/styles/HoverLinks.styles.scss
+++ b/client/src/styles/HoverLinks.styles.scss
@@ -17,7 +17,7 @@
     text-align: left;
     top: 130px;
     left: -10px;
-    padding-bottom: 10px;
+    padding-bottom: 7px;
     border-bottom: 1px solid #d2d5d6;
 }
 
@@ -34,7 +34,7 @@
     font-weight: bold;
     padding: 10px;
     left: -20px;
-    bottom: 290px;
+    top: 150px;
 }
 .embedLink:hover {
     text-decoration: underline;
