fixes database seeding file

--- a/client/src/styles/AddRating.styles.scss
+++ b/client/src/styles/AddRating.styles.scss
@@ -13,6 +13,10 @@
     border: solid 1px rgb(211, 209, 209);
 }
 
+.reviewLink {
+    margin-left: 50px;
+}
+
 .addReviewLink {
     margin-left: 75px;
     color:#0073bb;
