--- a/client/src/styles/styles.scss
+++ b/client/src/styles/styles.scss
@@ -7,6 +7,6 @@
 
 .application {
     position: relative;
-    margin-left: 200px;
-    // margin-top: 0px;
+    // margin-left: 200px;
+    margin-top: -150px;
 }
