--- a/client/src/styles/ListHeader.styles.scss
+++ b/client/src/styles/ListHeader.styles.scss
@@ -11,8 +11,9 @@ button, input[type="submit"], input[type="reset"] {
 h3 {
     font-family: Helvetica, Arial;
     font-weight: bold;
-    font-size: 0.95em;
+    font-size: 1.1em;
     color: #333;
+    margin-left:50px;
 }
 .ripple {
     background-position: center;
@@ -32,6 +33,7 @@ h3 {
     font-family: Helvetica, Arial;
     color: #333;
     font-size: 0.90em;
+    margin-left: 50px;
 }
 input.searchBar{
     padding-left: 6px;
